--- a/src/app/produtos/produtos-pesquisa/produtos-pesquisa.component.html
+++ b/src/app/produtos/produtos-pesquisa/produtos-pesquisa.component.html
@@ -68,7 +68,7 @@
                   </td>
                   <td>
                      <span class="ui-column-title">Unidade</span>
-                     {{ produto.unidade?.descricao}}
+                     {{ produto.unidade?.descricao }}
                   </td>
                   <td class="col-acoes">
                      <button
@@ -86,9 +86,7 @@
                         pTooltip="Excluir"
                         tooltipPosition="top"
                         (click)="confirmarExclusao(produto)"
-                        [disabled]="
-                           !auth.temPermissao('ROLE_REMOVER_PRODUTO')
-                        "
+                        [disabled]="!auth.temPermissao('ROLE_REMOVER_PRODUTO')"
                      ></button>
                      <!-- esconder botão
                         *nfIg="auth.temPermissao('ROLE_REMOVER_LANCAMENTO')"
