Alteração de Módulo Pedido para Venda

--- a/src/app/mesas/mesas-movimento/mesas-movimento.component.html
+++ b/src/app/mesas/mesas-movimento/mesas-movimento.component.html
@@ -18,7 +18,7 @@
             <p-footer>
                <button
                   pButton
-                  [routerLink]="['/pedidos', mesa.id]"
+                  [routerLink]="['/vendas', mesa.id]"
                   type="button"
                   label="+ Produtos"
                   style="margin-right: .25em"
